regression-tests/test-results/gcc-13/pure2-last-use.cpp.output
In file included from pure2-last-use.cpp:7:
pure2-last-use.cpp2: In member function ‘void issue_857::o2() &&’:
pure2-last-use.cpp2:128:47: error: ‘std::move’ is not a class member
  128 |   o2:(move this) = 0.n();
      |                                               ^  
pure2-last-use.cpp2:128:58: error: ‘this’ may not be used in this context
  128 |   o2:(move this) = 0.n();
      |                                                          ^   
pure2-last-use.cpp2:128:47: error: ‘std::move’ is not a class member
  128 |   o2:(move this) = 0.n();
      |                                               ^  
pure2-last-use.cpp2:128:58: error: ‘this’ may not be used in this context
  128 |   o2:(move this) = 0.n();
      |                                                          ^   
pure2-last-use.cpp2:128:47: error: ‘std::move’ is not a class member
  128 |   o2:(move this) = 0.n();
      |                                               ^  
pure2-last-use.cpp2:128:58: error: ‘this’ may not be used in this context
  128 |   o2:(move this) = 0.n();
      |                                                          ^   
pure2-last-use.cpp2:128:58: error: ‘this’ may not be used in this context
  128 |   o2:(move this) = 0.n();
      |                                                          ^   
pure2-last-use.cpp2:128:47: error: ‘std::move’ is not a class member
  128 |   o2:(move this) = 0.n();
      |                                               ^  
pure2-last-use.cpp2: In lambda function:
pure2-last-use.cpp2:128:47: error: ‘std::move’ is not a class member
  128 |   o2:(move this) = 0.n();
      |                                               ^  
pure2-last-use.cpp2:128:47: error: ‘std::move’ is not a class member
  128 |   o2:(move this) = 0.n();
      |                                               ^  
pure2-last-use.cpp2: In member function ‘void issue_857::o2() &&’:
pure2-last-use.cpp2:128:66: error: no match for call to ‘(issue_857::o2() &&::<lambda(Obj&&, Params&& ...)>) (int)’
  128 |   o2:(move this) = 0.n();
      |                                                                  ^
pure2-last-use.cpp2:128:37: note: candidate: ‘template<class Obj, class ... Params, bool IsNothrow> issue_857::o2() &&::<lambda(Obj&&, Params&& ...)>’
  128 |   o2:(move this) = 0.n();
      |                                     ^        
pure2-last-use.cpp2:128:37: note:   template argument deduction/substitution failed:
